I updated the comment in the markup file

--- a/random user details/index.html
+++ b/random user details/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <!--I need to figure out how to do the load spinner animation whilst
-        the info is still fetching.
+        the info is still fetching. Update necessary I guess.
     -->
     <form>
         <div id="picture">
