I figured out how stupid I am for not linking the script, but when it did I figured I needed credit cards and stuff for the API I was using, so I am going to find another one.

--- a/weather info/index.html
+++ b/weather info/index.html
@@ -19,7 +19,7 @@
         <span>
             <p id="image"></p>
             <p id="temperature"></p>
-            <p id="weathercondition"></p>
+            <p id="weatherCondition"></p>
         </span>
         <span>
             <p id="highPlaceholder"></p>
@@ -28,5 +28,6 @@
             <p id="lowValue"></p>
         </span>
     </fieldset>
+    <script src="script.js"></script>
 </body>
 </html>
